@@ -10,13 +10,10 @@
 from base64 import b64encode
 from email import message_from_file
 from optparse import OptionParser
-try:
-    import simplejson as json
-except ImportError:
-    import json # Python 2.6
 import sys
 
 from couchdb import __version__ as VERSION
+from couchdb import json
 from couchdb.client import Database
 from couchdb.multipart import read_multipart
 
@@ -32,7 +29,7 @@ def load_db(fileobj, dburl, username=None, password=None, ignore_errors=False):
         if is_multipart: # doc has attachments
             for headers, _, payload in payload:
                 if 'content-id' not in headers:
-                    doc = json.loads(payload)
+                    doc = json.decode(payload)
                     doc['_attachments'] = {}
                 else:
                     doc['_attachments'][headers['content-id']] = {
@@ -42,7 +39,7 @@ def load_db(fileobj, dburl, username=None, password=None, ignore_errors=False):
                     }
 
         else: # no attachments, just the JSON
-            doc = json.loads(payload)
+            doc = json.decode(payload)
 
         del doc['_rev']
         print>>sys.stderr, 'Loading document %r' % docid
@@ -62,6 +59,9 @@ def main():
                       dest='ignore_errors',
                       help='whether to ignore errors in document creation '
                            'and continue with the remaining documents')
+    parser.add_option('--json-module', action='store', dest='json_module',
+                      help='the JSON module to use ("simplejson", "cjson", '
+                            'or "json" are supported)')
     parser.add_option('-u', '--username', action='store', dest='username',
                       help='the username to use for authentication')
     parser.add_option('-p', '--password', action='store', dest='password',
@@ -73,9 +73,12 @@ def main():
         return parser.error('incorrect number of arguments')
 
     if options.input != '-':
-        fileobj = open(options.input)
+        fileobj = open(options.input, 'rb')
     else:
         fileobj = sys.stdin
+
+    if options.json_module:
+        json.use(options.json_module)
 
     load_db(fileobj, args[0], username=options.username,
             password=options.password, ignore_errors=options.ignore_errors)
